.prototype/manifests/spark-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-worker-dep
  namespace: spark-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spark-worker
  template:
    metadata:
      labels:
        app: spark-worker

    spec:
      volumes:
      - name: spark-worker-volume
        persistentVolumeClaim:
          claimName: spark-pvc

      containers:
      - name: spark-worker
        image: tryfonm/spark-node
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: spark-worker-volume
          mountPath: /shared
        command: ["sleep", "infinity"]
        # - "sh"
        # - "-c"
        # - |
        #   export $(cat /shared/.config) &&
        #   /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker \
        #   $SPARK_MASTER

      restartPolicy: Always
