.prototype/manifests/nodeport-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: spark-master-svc
  namespace: spark-ns
spec:
  type: NodePort
  selector:
    app: spark-master
  ports:
  - name: spark-master-port
    protocol: TCP
    # nodePort: 30080
    port: 1234
    targetPort: 7077 # replace with 4040 to get the spark-UI
---
apiVersion: v1
kind: Service
metadata:
  name: spark-worker-svc
  namespace: spark-ns
spec:
  type: NodePort
  selector:
    app: spark-worker
  ports:
  - name: spark-worker-port
    protocol: TCP
    # nodePort: 30080
    port: 1234
    targetPort: 8080 # replace with 4040 to get the spark-UI
---
apiVersion: v1
kind: Service
metadata:
  name: spark-history-server-svc
  namespace: spark-ns
spec:
  type: NodePort
  selector:
    app: spark-history-server
  ports:
  - name: spark-history-server-port
    protocol: TCP
    nodePort: 30080
    port: 1234
    targetPort: 18080 # replace with 4040 to get the spark-UI
