.prototype/manifests/cluster-ip-ingress-service.yaml
## localhost:8081
apiVersion: v1
kind: Service
metadata:
  name: spark-master-clusterip-svc
  namespace: spark-ns
spec:
  type: ClusterIP
  selector:
    app: spark-master
  ports:
  - port: 7077
    protocol: TCP
    targetPort: 7077
---
apiVersion: v1
kind: Service
metadata:
  name: spark-worker-clusterip-svc
  namespace: spark-ns
spec:
  type: ClusterIP
  selector:
    app: spark-worker
  ports:
  - port: 1235
    protocol: TCP
    targetPort: 7078
---
apiVersion: v1
kind: Service
metadata:
  name: spark-history-server-clusterip-svc
  namespace: spark-ns
spec:
  type: ClusterIP
  selector:
    app: spark-history-server
  ports:
  - port: 2345
    protocol: TCP
    targetPort: 18080
---
apiVersion: v1
kind: Service
metadata:
  name: spark-app-clusterip-svc
  namespace: spark-ns
spec:
  type: ClusterIP
  selector:
    app: spark-app
  ports:
  - port: 1236
    protocol: TCP
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-ingress
  namespace: spark-ns
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spark-history-server-clusterip-svc
            port:
              number: 2345
